<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">People</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="Name">Nombre</string>
    <string name="Inbox">General</string>


    <string name="dialog_ok_button">ok</string>
    <string name="dialog_cancel_button">Cancel</string>
    <!-- buttons -->
    <string name="add_item_button">Agregar</string>
    <string name="del_item_button">Quitar</string>

    <!-- srv -->
    <string name="srv_response_ok">Sucess</string>
    <!-- errors -->
    <string name="err_field_required">Field Required</string>
    <string name="err_response_nok">Bad Request. Codigo :</string>
    <string name="Person">Person</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="Birthday">Birthday</string>
    <string name="menu_item_delete">Delete</string>
    <string name="too_short">too short!</string>

</resources>