<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/Birthday"
        android:inputType="date" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/zip_code"
        android:inputType="number"
        android:maxLength="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <com.hbb20.CountryCodePicker
            android:id="@+id/area_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:countryPreference="US,PY"
            app:defaultNameCode="US" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/units_list"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:choiceMode="singleChoice" />
    <!--
     @SerializedName(F_NATIONALITY)
        String nationalityCode;
        @SerializedName(F_NATIONAL_ID)
        private String nationalId;
        @SerializedName(F_ADDRESS)
        private AddressModel address;
        @SerializedName(F_NOTE)
        private String note;
        @SerializedName(F_CELLPHONE)
        private String cellphone;


    -->
</LinearLayout>